--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,10 @@ dependencies:
   lottie: ^3.1.2
   permission_handler: ^11.3.1
   geolocator: ^12.0.0
+  geocoding: ^3.0.0
   firebase_messaging: ^15.0.2  # <-- ADD THIS
   device_info_plus: ^10.1.0
+  package_info_plus: ^8.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
