--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^5.1.1
   cloud_firestore: ^5.0.2
   lottie: ^3.1.2
+  provider: ^6.0.5
   permission_handler: ^11.3.1
   geolocator: ^12.0.0
   geocoding: ^3.0.0
